@@ -4,3 +4,7 @@
 -- SELECT * FROM ingenio.azucarcrudodetalle;
 
 SELECT * FROM ingenio.material;
+
+select m.descripcion, m.campo
+from ingenio.blcpdetalle6 d, ingenio.material m
+where d.material_id = m.id
